--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,5 +8,5 @@ services:
       - ./app:/app
       - /app/node_modules
     command: npm run dev  
-    environment:
-      NODE_ENV: development
+    env_file:
+      - .env
