--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.8'
+version: '3'
 services:
   app:
     build: ./app
@@ -9,4 +9,4 @@ services:
       - /app/node_modules
     command: npm run dev  
     env_file:
-      - .env
+      - ./app/.env
