--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,28 @@
 version: '3.8'
 services:
   app:
-    build: ./app
+    build: 
+      context: ./app
+    restart: unless-stopped
+    env_file:
+      - ./app/.env
+    environment:
+      - PORT=${APP_CONTAINER_PORT}
+      - DB_HOST_PORT=${DB_HOST_PORT} 
+      - DB_PASSWORD=${DB_PASSWORD}
     ports:
-      - "3000:3000"
+      - ${APP_HOST_PORT}:${APP_CONTAINER_PORT}
     volumes:
       - ./app:/app
       - /app/node_modules
     command: npm run dev  
-    env_file:
-      - ./app/.env
-    environment:
-      - PORT=${PORT}
+    
+  mysqldb:
+    image: mysql:lts-oraclelinux9
+    restart: unless-stopped
+    env_file: ./.env
+    ports:
+      - ${DB_HOST_PORT}:${DB_CONTAINER_PORT}
+    volumes:
+      - db:/var/lib/mysql
+  
