--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,7 @@ services:
       - PORT=${APP_CONTAINER_PORT}
       - DB_HOST_PORT=${DB_HOST_PORT} 
       - DB_PASSWORD=${DB_PASSWORD}
+      - DB_USER=${DB_USER}
     ports:
       - ${APP_HOST_PORT}:${APP_CONTAINER_PORT}
     volumes:
