--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,30 +4,38 @@ services:
     build: 
       context: ./app
     depends_on:
-      - mysqldb  
+      mysqldb:
+        condition: service_healthy  
     restart: unless-stopped
     env_file:
       - ./app/.env
     environment:
       - PORT=${APP_CONTAINER_PORT}
-      - DB_HOST_PORT=${DB_HOST_PORT} 
+      - DB_CONTAINER_PORT=${DB_CONTAINER_PORT} 
       - DB_PASSWORD=${DB_PASSWORD}
       - DB_USER=${DB_USER}
+      - DB_HOST=mysqldb # the same with service name
     ports:
       - ${APP_HOST_PORT}:${APP_CONTAINER_PORT}
     volumes:
       - ./app:/app
       - /app/node_modules
-    command: npm run dev  
+    command: npm run dev 
     
   mysqldb:
-    image: mysql:lts
+    image: mysql:8.4.0
     restart: unless-stopped
     env_file: ./.env
     environment:
       - MYSQL_ROOT_PASSWORD=${DB_PASSWORD}
     ports:
       - ${DB_HOST_PORT}:${DB_CONTAINER_PORT}
+    healthcheck:
+      test: ["CMD","mysqladmin","ping","-h","localhost","--silent"]
+      interval: 20s
+      timeout: 5s
+      retries: 5
+
     volumes:
       - db:/var/lib/mysql
 
