--- a/app/package.json
+++ b/app/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-rate-limit": "^7.3.1",
     "morgan": "^1.10.0",
     "mysql2": "^3.10.0",
     "sequelize": "^6.37.3",
