--- a/app/package.json
+++ b/app/package.json
@@ -22,6 +22,7 @@
     "express": "^4.19.2",
     "express-rate-limit": "^7.3.1",
     "express-session": "^1.18.0",
+    "express-validator": "^7.1.0",
     "helmet": "^7.1.0",
     "morgan": "^1.10.0",
     "mysql2": "^3.10.0",
