--- a/app/package.json
+++ b/app/package.json
@@ -23,6 +23,7 @@
     "express-session": "^1.18.0",
     "express-validator": "^7.1.0",
     "helmet": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "mysql2": "^3.10.0",
     "sequelize": "^6.37.3",
