--- a/app/package.json
+++ b/app/package.json
@@ -26,6 +26,7 @@
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "mysql2": "^3.10.0",
+    "nodemailer": "^6.9.14",
     "sequelize": "^6.37.3",
     "winston": "^3.13.0",
     "xss-clean": "^0.1.4"
