--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,7 @@ services:
       - DB_PASSWORD=${DB_PASSWORD}
       - DB_USER=${DB_USER}
       - DB_HOST=mysqldb # the same with service name
+      - FRONT_HOST=www.front.com # the same with service name
     ports:
       - ${APP_HOST_PORT}:${APP_CONTAINER_PORT}
     volumes:
